fix: Correctly wrap long task and project titles to not block 'edit' and 'delete' buttons

--- a/src/styles.css
+++ b/src/styles.css
@@ -769,6 +769,13 @@ a {
   flex: 1;
 }
 
+@media screen and (max-width: 25em) {
+  .task-item-content {
+    margin-right: 45px;
+  }
+}
+
+
 .task-item-wrapper {
   display: flex;
   flex-direction: column;
@@ -1310,8 +1317,10 @@ h1.form-header-text {
   display: flex;
   align-items: center;
   padding: var(--main-spacing-medium);
+  padding-left: 0;
   border-radius: 10px;
   text-decoration: none;
+  margin-right: 1em;
 }
 
 @media (max-width: 992px) {
@@ -1330,7 +1339,7 @@ h1.form-header-text {
 
 @media (max-width: 992px) {
   .project-page-project-item-text  {
-      min-width: 250px;
+      min-width: 190px;
   }
 }
 .project-page-project-item-text {
@@ -1340,7 +1349,7 @@ h1.form-header-text {
   justify-content: flex-start;
   gap: var(--main-spacing-xsmall);
   text-overflow: ellipsis;
-  white-space: nowrap;
+  white-space: pre-wrap;
   overflow: hidden;
   padding-right: var(--main-spacing-xsmall);
   font-weight: normal;
